wcfsetup/install/files/style/ui/article.scss
.articleImage {
	.articleImageWrapper {
		align-items: center;
		display: flex;
		max-height: 300px;
		overflow: hidden;
		
		img {
			height: auto !important;
			width: 100% !important;
		}
	}
	
	figcaption {
		color: $wcfContentDimmedText;
		margin-top: 5px;
		text-align: center;
		
		@include wcfFontSmall;
	}
}

.articleContent {
	.articleTeaser {
		@include wcfFontBold;
		
		margin-bottom: 20px;
	}
	
	.articleTagList,
	.articleLikeSection {
		margin-top: 20px;
	}
	
	.articleLikeSection {
		align-items: center;
	}
	
	.articleLikeButtons {
		justify-content: flex-end;
		
		.invisible {
			display: inline;
		}
	}
}

.articleAboutAuthor {
	.articleAboutAuthorText {
		font-style: italic;
	}
	
	.articleAboutAuthorUsername {
		margin-top: 5px;
		
		.username {
			@include wcfFontHeadline;
		}
		
		.userTitleBadge {
			top: -2px;
		}
	}
}

.articleNavigation {
	@include screen-md-up {
		> nav > ul {
			display: flex;
		}
	}
	
	.previousArticleButton,
	.nextArticleButton {
		display: flex;
		
		@include screen-md-up {
			flex: 0 0 50%;
		}
		
		> a {
			color: $wcfContentText;
			display: flex;
			
			&::before {
				align-self: center;
				display: block;
				flex: 0 0 auto;
				font-family: FontAwesome;
				font-size: 36px;
			}
			
			> div {
				flex: 1 1 auto;
			}
			
			.articleNavigationEntityName,
			.articleNavigationArticleTitle {
				display: block;
			}
			
			.articleNavigationEntityName {
				text-transform: uppercase;
			}
			
			.articleNavigationArticleTitle {
				margin-top: 3px;
				
				@include wcfFontHeadline;
			}
			
			.articleNavigationArticleImage {
				> img {
					border-radius: 2px;
					opacity: .85;
					transition: .2s ease opacity;
				}
			}
			
			&:hover {
				&::before {
					color: $wcfContentLinkActive;
				}
				
				.articleNavigationArticleTitle {
					color: $wcfContentLinkActive;
				}
				
				.articleNavigationArticleImage {
					> img {
						opacity: 1;
					}
				}
			}
		}
	}
	
	.previousArticleButton {
		@include screen-md-up {
			padding-right: 10px;
		}
		
		> a {
			&::before {
				content: $fa-var-chevron-left;
			}
			
			> div {
				margin-left: 10px;
			}
		}
	}
	
	.nextArticleButton {
		justify-content: flex-end;
		text-align: right;
		
		@include screen-md-up {
			margin-left: 50%;
			padding-left: 10px;
		}
		
		.articleNavigationArticleImage {
			order: 1;
			margin-left: 15px;
			margin-right: 0;
		}
		
		> a {
			&::before {
				content: $fa-var-chevron-right;
				order: 1;
			}
			
			> div {
				margin-right: 10px;
			}
		}
	}
	
	.previousArticleButton + .nextArticleButton {
		@include screen-sm-down {
			margin-top: 20px;
		}
		
		@include screen-md-up {
			margin-left: 0;
		}
	}
}

/* fix icons in rtl design */
html[dir="rtl"] {
	.articleNavigation {
		.previousArticleButton {
			> a {
				&::before {
					content: $fa-var-chevron-right;
				}
			}
		}
		
		.nextArticleButton {
			> a {
				&::before {
					content: $fa-var-chevron-left;
				}
			}
		}
	}
}

.articleList {
	.articleListMetaData {
		color: $wcfContentDimmedText;
		margin-top: 2px;
		
		.icon {
			color: inherit;
		}
	}
	
	a {
		color: inherit;
		
		&:hover {
			color: inherit;
			
			.articleListImage > img {
				opacity: 1;
			}
			
			.articleListTitle {
				color: $wcfContentLinkActive;
			}
		}
	}
	
	.articleListImage > img {
		border-radius: 2px;
		opacity: .85;
		transition: .2s ease opacity;
	}
	
	> li:not(:first-child) {
		margin-top: 30px;
	}
	
	@include screen-xs {
		.box128 > .articleListImage {
			margin-right: 10px;
		}
		
		.articleListImage > img {
			height: 64px !important;
			width: 64px !important;
		}
	}
}

.boxesFooterBoxes {
	.articleList {
		display: flex;
		flex-wrap: wrap;
		margin: 0 -5px -20px -5px;
		
		> li {
			margin: 0 5px 20px 5px;
		}
		
		.articleListImage > img {
			height: auto !important;
			max-width: 280px;
			width: 100% !important;
		}
		
		.articleListImage + .articleListTitle {
			margin-top: 5px;
		}
		
		.articleListMetaData {
			display: none;
		}
	}
	
	@include screen-lg {
		.articleList {
			> li {
				flex: 0 0 calc(100%/3 - 10px);
				max-width: calc(100%/3 - 10px);
			}
		}

		.boxFullWidth {
			.articleList {
				> li {
					flex: 0 0 calc(100%/6 - 10px);
					max-width: calc(100%/6 - 10px);
				}
			}
		}
	}
	
	@include screen-sm-up {
		.articleList {
			> li {
				flex: 0 0 calc(100%/3 - 10px);
				max-width: calc(100%/3 - 10px);
			}
		}
	}
	
	@include screen-xs {
		.articleList {
			justify-content: center;
			
			> li {
				width: 280px;
			}
		}
	}
}

